tests/type-errors/no_update_asset_key.arl
archetype no_update_asset_key

asset myasset {
  id : string;
}

entry anaction (k : string) {
  effect {
    myasset.get(k).id := "mykey"
  }
}
